@@ -47,6 +47,36 @@ name|Bytes
 import|;
 end_import
 
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
 begin_comment
 comment|/**  * HConstants holds a bunch of HBase-related constants  */
 end_comment
@@ -1145,6 +1175,42 @@ name|float
 name|HBASE_CLUSTER_MINIMUM_MEMORY_THRESHOLD
 init|=
 literal|0.2f
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|HBASE_NON_USER_TABLE_DIRS
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|String
+argument_list|>
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|".logs"
+block|,
+literal|".oldlogs"
+block|,
+literal|".corrupt"
+block|,
+literal|".META."
+block|,
+literal|"-ROOT-"
+block|}
+argument_list|)
+argument_list|)
 decl_stmt|;
 specifier|private
 name|HConstants
